[package]
name = "drawbridge"
version = "0.1.0"
authors = ["Ben Challenor <ben@challenor.org>"]

[profile.release]
lto = true

[dependencies]
clap = "2.29.2"
failure = "0.1"
futures = "0.1"
hyper = "0.11"
ipnet = "1.0.0"
openssl-probe = "0.1.2"
rusoto_core = "0.31.0"
rusoto_ec2 = "0.31.0"
rusoto_route53 = "0.31.0"
tokio-core = "0.1"
